--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-instagrapi
-openai
-colorama
-pyinstaller
+instagrapi==1.17.10
+openai>=1.12.0,<2.0.0
+colorama==0.4.6
+pyinstaller==6.3.0
+python-dotenv==1.0.1
+requests>=2.31.0,<3.0.0
+pyotp==2.9.0
+cryptography==41.0.7
+moviepy==1.0.3
+pillow>=9.0.0
