--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 instagrapi==1.17.10
+playwright>=1.42.0
 openai>=1.12.0,<2.0.0
 colorama==0.4.6
 pyinstaller==6.3.0
@@ -10,3 +11,4 @@ moviepy==1.0.3
 pillow>=9.0.0
 google-auth>=2.0.0
 google-api-python-client>=2.0.0
+pytest>=7.4.0
